log
Tue 21 Mar 2023 03:48:04 PM UTC: 
 tests:  0|6
total_score: 0/70
95774f3
Tue 21 Mar 2023 03:56:34 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
a7a8fe3
Tue 21 Mar 2023 04:00:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c37be04
Tue 21 Mar 2023 04:13:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
93aedb6
Tue 21 Mar 2023 04:16:42 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
513b56d
Tue 21 Mar 2023 04:18:43 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
7cbafd6
Tue 21 Mar 2023 04:19:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f650877
Tue 21 Mar 2023 04:23:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5a14b8
Tue 21 Mar 2023 04:23:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
344a2df
Tue 21 Mar 2023 04:25:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff06b59
Tue 21 Mar 2023 04:25:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6fc676a
Tue 21 Mar 2023 10:00:19 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:29: error: expected ‘;’ before ‘return’
   64 |   list->current = list->tail
      |                             ^
      |                             ;
......
   70 |     return list->current->data;
      |     ~~~~~~                   
list.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
285849b
Tue 21 Mar 2023 10:00:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ddc4f7f
